# aws-robomaker-racetrack-world

./: CMakeLists.txt
worlds/: racetrack_day.world  racetrack_day_empty.world  racetrack_night.world
